k8s-manifest/base/02-processor-deployment.yml
# Defines the Kubernetes Deployment for the Transaction Processor worker service.
# This manifest specifies the container image, resource requests/limits, and liveness/readiness probes to ensure the service runs reliably.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-deployment
  namespace: finmon-app
  labels:
    project: financial-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-processor
  template:
    metadata:
      labels:
        app: transaction-processor
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: finmon-app-sa
      containers:
      - name: processor
        image: finmonacr2f88f1a9.azurecr.io/transactionprocessor:latest
        #https://kubernetes.io/docs/concepts/configuration/liveness-readiness-startup-probes/
        livenessProbe:
          exec:
            command:
            - pidof
            - dotnet
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - pidof
            - dotnet
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
