k8s-manifest/base/04-simulator-deployment.yml
# Defines the Kubernetes Deployment for the Transaction Simulator.
# This service generates and sends synthetic financial transaction data to the Event Hubs `transactions` topic for processing.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator-deployment
  namespace: finmon-app
  labels:
    project: financial-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-simulator
  template:
    metadata:
      labels:
        app: transaction-simulator
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: finmon-app-sa
      containers:
      - name: simulator
        image: finmonacr2f88f1a9.azurecr.io/transactionsimulator:latest
        livenessProbe:
          exec:
            # This command checks if the /tmp/healthy file has been modified in the last minute.
            command:
            - find
            - /tmp/healthy
            - -mmin
            - "-1"
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
